006 ==> 458958 - Album items not sorted according to date from XMP sidecar.
007 ==> 459124 - Tags are duplicated when adding People/Face tags.
008 ==> 459370 - Merge tags dont remove old tags.
009 ==> 453621 - Error while opening the database.
010 ==> 459463 - Paste Coordinates Lost Precision.
011 ==> 459276 - Batch Queue Manager, Base tool (Convert tool): crash for some selected formats.
012 ==> 459306 - 'Ambiguous Shortcuts' Message is displayed every time digiKam is launched.
013 ==> 459822 - Blending raw images (-2,0,+2 Ev) does not result in exposure blend. (all three TIFFs are corrected for 0Ev before merging.)
014 ==> 459819 - digiKam Crashes after downloading several files.
015 ==> 459910 - Picture detail in full screen.
016 ==> 459892 - Fingerprints in maintenance mode crash.
017 ==> 398386 - Allow video frame to be saved as picture.
018 ==> 459969 - Unconfirmed Faces are not grouped correctly when re-running recognition.
019 ==> 460091 - Original batch still present after modification.
020 ==> 460124 - Unable to acces existing collections.
021 ==> 460132 - Impossible to drag suggested face tag to other face tag in sidebar (for reassignment).
022 ==> 460153 - Deleting an album takes many seconds.
023 ==> 429709 - Date view suddenly switches to month view.
024 ==> 416524 - Cannot move item inside album or between albums.
025 ==> 370356 - Very slow when delete photos and albums.
026 ==> 460464 - "Scan for faces" context menu in Faces view does not trigger scan.
027 ==> 460629 - "People" top level tag appears in People left hand pane.
027 ==> 460683 - digiKam crash on libheif.
028 ==> 456882 - HEIF decoding in 7.7.0 flatpak version not supported.
029 ==> 460746 - Face rectangle description boxes "fly out of the view" when zooming an image with many faces.
030 ==> 425254 - Face tagging in digiKam: Exiv2 saves [XMP-mwg-rs] with "inf, inf, inf, inf" instead of numbers.
031 ==> 461197 - English mistranslation in showfoto undo cache free space warning.
032 ==> 